<resources>
    <string name="GMA_lite.CardProgress_progressTextTemplate">%1$d / %2$d</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">"McDonald's"</string>
    <string name="app_unlicensed">This app is not licensed</string>
    <string name="app_unlicensed_close">Close</string>
    <string name="app_unlicensed_description">This application is not licensed nor valid. Please download the app from a trusted source.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">f45695aa-1dd4-4dd7-bd7f-525a505c73bc</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="default_web_client_id">800121368657-f9s443b5nm5rv0ug77lo7p4fcjm0jg8g.apps.googleusercontent.com</string>
    <string name="define_AndroidIconics">year;owner</string>
    <string name="define_fastadapter">year;owner</string>
    <string name="define_font_McdonaldsIcon">com.mikepenz.mcdonalds_icon_typeface_library.McdonaldsIcon</string>
    <string name="define_materialdrawer">year;owner</string>
    <string name="define_materialize">year;owner</string>
    <string name="define_piracychecker" />
    <string name="dgts__call_me">Call me</string>
    <string name="dgts__calling">Calling…</string>
    <string name="dgts__confirmationEditTextPlaceholder">------</string>
    <string name="dgts__confirmation_code">Confirmation code</string>
    <string name="dgts__confirmation_edit_hint">Enter the 6-digit code we sent you</string>
    <string name="dgts__confirmation_error">Unable to confirm your phone number</string>
    <string name="dgts__confirmation_error_alternative">Sorry, we are having trouble sending you a confirmation code.</string>
    <string name="dgts__continue">Continue</string>
    <string name="dgts__country_spinner_format">%1$s +%2$d</string>
    <string name="dgts__create_account">Create account</string>
    <string name="dgts__digits_com_settings_url">https://www.digits.com/settings</string>
    <string name="dgts__digits_com_url">https://www.digits.com</string>
    <string name="dgts__digits_logo_desc">digits logo icon</string>
    <string name="dgts__digits_logo_name_desc">digits logo name</string>
    <string name="gmal_account_login_button_forgot_password">"Can't remember your password?"</string>
    <string name="gmal_account_login_button_register">Create account</string>
    <string name="gmal_account_login_button_sign_in">Sign in</string>
    <string name="gmal_account_login_hint_email">Email</string>
    <string name="gmal_account_login_hint_password">Password</string>
    <string name="gmal_account_login_info_text_or">or</string>
    <string name="gmal_account_migration_body">"We've done a lot of changes and can't wait to show them to you. But first some necessities"</string>
    <string name="gmal_account_migration_title">Did you have an account in the old app?</string>
    <string name="gmal_account_privacy">See our Privacy Statement</string>
    <string name="gmal_account_progressive_profile_unauthorized_button_continue">"Let's go!"</string>
    <string name="gmal_account_progressive_profile_unauthorized_description">In order to use this section, you need to login or create account.</string>
    <string name="gmal_account_progressive_profile_unauthorized_title">You need to sign in</string>
    <string name="gmal_account_setting_button_cancel">Cancel</string>
    <string name="gmal_account_setting_button_edit">Edit</string>
    <string name="gmal_account_setting_button_logout">Log out</string>
    <string name="gmal_account_setting_button_save">Done</string>
    <string name="gmal_account_terms_update_description">The purpose of this App is to provide you with offers based on your preferences and app usage. If you do not want McDonald’s to use your preferences and app usage in this way then you should not proceed to registration. See our<a href="https://mcdonaldsapps.com/en-GB/legal"><u> Privacy Statement</u></a></string>
    <string name="gmal_account_tnc_update_button_accept">Continue</string>
    <string name="gmal_account_tnc_update_info_text_title">"We've updated our terms!"</string>
    <string name="gmal_error_offline_body">Unfortunately this section requires that you have an internet connection.</string>
    <string name="gmal_error_offline_button_text">Reload</string>
    <string name="gmal_error_offline_title">"It appears as if you don't have connection to the internet."</string>
    <string name="gmal_forceupdate_button_download">Download</string>
    <string name="gmal_forceupdate_info_text_body">To continue using the service, you must download the new version of the app.</string>
    <string name="gmal_forceupdate_info_text_title">A new version is available</string>
    <string name="gmal_general_no">No</string>
    <string name="gmal_general_yes">Yes</string>
    <string name="gmal_offer_confirm_button_cancel">Cancel</string>
    <string name="gmal_offer_confirm_button_yes">Yes</string>
    <string name="gmal_offer_confirm_info_text_above">You will only have</string>
    <string name="gmal_offer_confirm_info_text_below">to redeem your offer.</string>
    <string name="gmal_offer_confirm_info_text_title">Are you in our restaurant and ready to redeem this offer now?</string>
    <string name="vmob_diagnostics_enable_beacon_notif">Enable beacon notifications</string>
    <string name="vmob_diagnostics_enable_geofence_notif">Enable geofence notifications</string>
    <string name="vmob_diagnostics_events_clear_button">Clear events</string>
    <string name="vmob_diagnostics_events_empty">&lt;No events logged yet></string>
    <string name="vmob_diagnostics_last_location">Last known location:</string>
    <string name="vmob_diagnostics_refresh_regions_button">Refresh regions</string>
    <string name="vmob_diagnostics_update_button">Update</string>
</resources>