<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/GMA_Lite.White" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <android.support.design.widget.TextInputLayout android:id="@id/account_login_email_holder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" app:hintTextAppearance="@android:style/TextAppearance.Small">
            <EditText android:id="@id/account_login_email_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/gmal_account_login_hint_email" android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:id="@id/account_login_password_holder" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_below="@id/account_login_email_holder" app:hintTextAppearance="@android:style/TextAppearance.Small" app:passwordToggleEnabled="true">
            <EditText android:id="@id/account_login_password_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/gmal_account_login_hint_password" android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <mcdonalds.core.view.RuntimeUpdatableTextView android:textColor="?themeColor" android:id="@id/account_login_forgot_password_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/gmal_account_login_button_forgot_password" android:layout_below="@id/account_login_password_holder" android:layout_centerHorizontal="true" />
        <mcdonalds.core.view.RuntimeUpdatableButtonView android:id="@id/account_login_btn" android:layout_margin="10.0dip" android:text="@string/gmal_account_login_button_sign_in" android:layout_below="@id/account_login_forgot_password_text" style="@style/GMA_Lite_ButtonAppearance" />
        <mcdonalds.core.view.RuntimeUpdatableTextView android:id="@id/account_separetor_or" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gmal_account_login_info_text_or" android:layout_below="@id/account_login_btn" android:layout_centerHorizontal="true" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
        <mcdonalds.core.view.RuntimeUpdatableButtonView android:id="@id/account_register_btn" android:layout_margin="10.0dip" android:text="@string/gmal_account_login_button_register" android:layout_below="@id/account_separetor_or" style="@style/GMA_Lite_ButtonAppearance" />
    </RelativeLayout>
</ScrollView>