<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:layout_weight="1.0">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vmob_diagnostics_last_location" android:textIsSelectable="true" />
            <TextView android:id="@id/text_last_location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" />
        </LinearLayout>
        <Button android:layout_gravity="center|right|top" android:id="@id/bt_update_location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vmob_diagnostics_update_button" />
    </LinearLayout>
    <Button android:layout_gravity="right" android:id="@id/bt_clear_events" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vmob_diagnostics_events_clear_button" />
    <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:divider="@android:color/transparent" android:fastScrollEnabled="true" />
    <TextView android:textStyle="italic" android:layout_gravity="center_horizontal" android:id="@android:id/empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vmob_diagnostics_events_empty" android:textIsSelectable="true" />
</LinearLayout>