<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/bt_refresh_regions" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:text="@string/vmob_diagnostics_refresh_regions_button" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <CheckBox android:id="@id/cbox_geofence_notif" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vmob_diagnostics_enable_geofence_notif" android:layout_below="@id/bt_refresh_regions" />
    <CheckBox android:id="@id/cbox_beacon_notif" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vmob_diagnostics_enable_beacon_notif" android:layout_below="@id/cbox_geofence_notif" />
    <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="@android:color/transparent" android:layout_below="@id/cbox_beacon_notif" />
    <ProgressBar android:id="@android:id/empty" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
</RelativeLayout>