<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="layout/layout_account_migration_0" android:background="@color/GMA_Lite.White" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:id="@id/migration_image" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginRight="40.0dip" android:src="@drawable/migration" android:scaleType="fitCenter" android:adjustViewBounds="true" android:minHeight="200.0dip" />
        <mcdonalds.core.view.RuntimeUpdatableTextView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/migration_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/gmal_account_migration_title" android:textAlignment="center" style="@style/GMA_Lite_TextAppearance.Header" />
        <mcdonalds.core.view.RuntimeUpdatableTextView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/migration_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/gmal_account_migration_body" android:textAlignment="center" style="@style/GMA_Lite_TextAppearance.Body" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="24.0dip" android:weightSum="2.0" android:layout_alignParentBottom="true" android:layout_marginStart="12.0dip" android:layout_marginEnd="12.0dip">
        <mcdonalds.core.view.RuntimeUpdatableButtonView android:id="@id/no_button" android:layout_width="0.0dip" android:text="@string/gmal_general_no" android:layout_weight="1.0" android:layout_marginEnd="6.0dip" style="@style/GMA_Lite_ButtonAppearance.Raised" />
        <mcdonalds.core.view.RuntimeUpdatableButtonView android:id="@id/yes_button" android:layout_width="0.0dip" android:text="@string/gmal_general_yes" android:layout_weight="1.0" android:layout_marginStart="6.0dip" style="@style/GMA_Lite_ButtonAppearance.Raised" />
    </LinearLayout>
</RelativeLayout>