<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:tag="layout/account_login_require_0" android:background="@color/GMA_Lite.White" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/require_lgoin_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/login_required" app:layout_constraintBottom_toTopOf="@id/require_lgoin_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <mcdonalds.core.view.RuntimeUpdatableTextView android:gravity="center" android:id="@id/require_lgoin_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gmal_account_progressive_profile_unauthorized_title" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:layout_constraintBottom_toTopOf="@id/require_lgoin_body" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/require_lgoin_image" style="@style/GMA_Lite_TextAppearance.Title" />
    <mcdonalds.core.view.RuntimeUpdatableTextView android:gravity="center" android:id="@id/require_lgoin_body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/gmal_account_progressive_profile_unauthorized_description" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:layout_constraintBottom_toTopOf="@id/require_lgoin_image" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/require_lgoin_title" style="@style/GMA_Lite_TextAppearance.Body" />
    <mcdonalds.core.view.RuntimeUpdatableButtonView android:id="@id/require_login_button" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/gmal_account_progressive_profile_unauthorized_button_continue" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" style="@style/GMA_Lite_ButtonAppearance.Raised" />
</android.support.constraint.ConstraintLayout>