<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/recycler_error_holder" android:background="@color/GMA_Lite.White" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/recycler_error_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" />
        <mcdonalds.core.view.RuntimeUpdatableTextView android:gravity="center" android:id="@id/recycler_error_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gmal_error_offline_title" android:layout_below="@id/recycler_error_image" android:layout_centerHorizontal="true" style="@style/GMA_Lite_TextAppearance.Header" />
        <mcdonalds.core.view.RuntimeUpdatableTextView android:gravity="center_horizontal" android:id="@id/recycler_error_body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/gmal_error_offline_body" android:layout_below="@id/recycler_error_title" style="@style/GMA_Lite_TextAppearance.Body" />
    </RelativeLayout>
    <mcdonalds.core.view.RuntimeUpdatableButtonView android:textColor="@color/GMA_Lite.White" android:id="@id/recycler_error_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="30.0dip" android:text="@string/gmal_error_offline_button_text" android:layout_alignParentBottom="true" style="@style/GMA_Lite_ButtonAppearance" />
</RelativeLayout>